tests/ui/invalid/invalid-plugin-attr.stderr
warning: use of deprecated attribute `plugin`: compiler plugins are deprecated. See https://github.com/rust-lang/rust/pull/64675
  --> $DIR/invalid-plugin-attr.rs:4:1
   |
LL | #[plugin(bla)]
   | ^^^^^^^^^^^^^^ help: may be removed in a future compiler version
   |
   = note: `#[warn(deprecated)]` on by default

error: crate-level attribute should be an inner attribute: add an exclamation mark: `#![foo]`
  --> $DIR/invalid-plugin-attr.rs:4:1
   |
LL | #[plugin(bla)]
   | ^^^^^^^^^^^^^^
   |
note: the lint level is defined here
  --> $DIR/invalid-plugin-attr.rs:1:9
   |
LL | #![deny(unused_attributes)]
   |         ^^^^^^^^^^^^^^^^^

error: aborting due to previous error; 1 warning emitted

